--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-<p style text-align: center;>nexus-node<p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>nexus-node collectibles</title>
+  <meta content="nexus-node collectibles" name="nexus-node collectibles">
+
+
+  <!-- Favicons -->
+  <link href="w3/img/glow350.jpg" rel="icon">
+  <link href="w3/img/glow350.jpg" rel="apple-touch-icon">
+
+  <link href="w3/css/style.css" rel="stylesheet">
+
+</head>
+
+<body>
+
+<!-- nexus node collectibles website-->
+
+
+<br>
+
+<h4 style = "text-align: center;">nexus-node Collectibles</h4>
+
+<br>
+
+<hr style = "width: 50%;">
+
+<br>
+
+
+
+<img src = "w3/img/glow350.jpg" style="display: block; margin-right: auto; margin-left: auto;">
+
+<br><br>
+
+
+
+
+
+
+
+
+</body>
+
+</html>
