--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link href="w3/img/glow350.jpg" rel="apple-touch-icon">
 
   <link href="w3/css/style.css" rel="stylesheet">
+   <script src="https://github.com/SamsungInternet/3D-model/blob/master/scripts/model3d.js"></script>
 
 </head>
 
@@ -40,6 +41,7 @@
 
 
 
+    <model-3d background-color="#ffffff" src="models/panda.glb"></model-3d>
 
 
 
