--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link href="w3/img/glow350.jpg" rel="apple-touch-icon">
 
   <link href="w3/css/style.css" rel="stylesheet">
-   <script src="https://github.com/SamsungInternet/3D-model/blob/master/scripts/model3d.js"></script>
+
 
 </head>
 
@@ -38,11 +38,14 @@
 <img src = "w3/img/glow350.jpg" style="display: block; margin-right: auto; margin-left: auto;">
 
 <br><br>
+<hr style = "width: 50%;">
 
+<br>
 
-
-    <model-3d background-color="#ffffff" src="models/panda.glb"></model-3d>
-
+<div class="sketchfab-embed-wrapper">
+    <iframe title="Wolf Rock" src="https://sketchfab.com/models/dbf805e72c7f4ba288d7434302dcd96c/embed?ui_theme=dark">
+    </iframe>
+</div>
 
 
 
