--- a/index.html
+++ b/index.html
@@ -35,15 +35,16 @@
 
 
 
-<img src = "w3/img/glow350.jpg" style="display: block; margin-right: auto; margin-left: auto;">
+<img src = "w3/img/glow350.jpg" style="display: block; margin-right: auto; margin-left: auto; width: 150px; height: 150px;">
 
 <br><br>
 <hr style = "width: 50%;">
 
 <br>
 
-<div class="sketchfab-embed-wrapper">
-    <iframe title="Wolf Rock" src="https://sketchfab.com/models/dbf805e72c7f4ba288d7434302dcd96c/embed?ui_theme=dark">
+
+<div class="sketchfab-embed-wrapper" style="text-align: center;">
+    <iframe title="Wolf Rock" width="600" height="450" src="https://sketchfab.com/models/dbf805e72c7f4ba288d7434302dcd96c/embed?autospin=0&autostart=1&camera=0&ui_theme=dark">
     </iframe>
 </div>
 
