--- a/index.html
+++ b/index.html
@@ -23,21 +23,18 @@
 <!-- nexus node collectibles website-->
 
 
-<br>
 
-<h4 style = "text-align: center;">nexus-node Collectibles</h4>
 
-<br>
 
-<hr style = "width: 50%;">
 
-<br>
+
 
 
 
 <img src = "w3/img/glow350.jpg" style="display: block; margin-right: auto; margin-left: auto; width: 150px; height: 150px;">
 
-<br><br>
+<h4 style = "text-align: center;">nexus-node Collectibles</h4>
+<br>
 <hr style = "width: 50%;">
 
 <br>
@@ -46,6 +43,10 @@
 <div class="sketchfab-embed-wrapper" style="text-align: center;">
     <iframe title="Wolf Rock" width="600" height="450" src="https://sketchfab.com/models/dbf805e72c7f4ba288d7434302dcd96c/embed?autospin=0&autostart=1&camera=0&ui_theme=dark">
     </iframe>
+<br><br>
+<a href = "https://opensea.io/assets/0x495f947276749ce646f68ac8c248420045cb7b5e/78970680898282911993163731217810724175833675415929056662705500971468454887466" target = _blank>Buy on OpenSea</a>
+
+
 </div>
 
 
